--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="/css/introHCI.css" rel="stylesheet">
   <script src="/js/canvas-to-blob.min.js"></script>
+  <script src = '/js/mapQuest.js'></script>
+  <script src = "https://api.mqcdn.com/sdk/mapques-js/v1.3.2/mapquest.js"></script>
+  <link type = "text/css" rel = "stylesheet" href = "https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
   <script src="/js/introHCI.js"></script>
   <script src="/js/camera.js"></script>
 
